--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -1,13 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8">
+
+    <title>Hello React!</title>
+
+    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 </head>
+
 <body>
-    <h1>Hello world</h1>
-    <script src="index.js"></script>
+
+    <div id="root"></div>
+
+    <script type="text/babel">
+        class App extends React.Component { 
+            render() { 
+                return (
+                    <h1>Hello world!</h1>
+                ); 
+            } 
+        } 
+
+        ReactDOM.render(<App />, document.getElementById('root'));
+    </script>
+
 </body>
+
 </html>
