--- a/js-basics/index.html
+++ b/js-basics/index.html
@@ -16,7 +16,7 @@
         class App extends React.Component { 
             render() { 
                 return (
-                    <h1>Hello world!</h1>
+                    <h1>Hello world React!</h1>
                 ); 
             } 
         } 
